--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <h1 style="text-align: center; font-family: Arial, sans-serif; color: #2c3e50; margin-top: 20px;">
-        🐶 Mapa de Lugares Pet-Friendly en Bogotá
+        🐶 Mapa de Lugares Pet-Friendly
     </h1>
     <div id="map">
     </div>
