--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ fetch("https://petfriendly-proxy-production.up.railway.app/datos_pet")
       }
     }).addTo(map);
 
-    mapa.fitBounds(capa.getBounds());
+    map.fitBounds(capa.getBounds());
   });
 
 
