--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         🐶 Mapa de Lugares Pet-Friendly
     </h1>
     <div id="map">
+<!--         <a href="https://ee.kobotoolbox.org/x/CrwOHzul/results" target="_blank" 
+   style="position: absolute; bottom: 10px; right: 10px; z-index: 1000; background: white; padding: 8px; border-radius: 6px; text-decoration: none; color: #000; font-weight: bold; box-shadow: 0 2px 4px rgba(0,0,0,0.2);">
+   📋 Ver listado completo
+</a> -->
     </div>
 
     <script src="js/qgis2web_expressions.js">
@@ -577,7 +581,41 @@ legend.addTo(map);
     
   // URL del API público de KoboToolbox con los datos
 
-  function obtenerColor(tipo) {
+ // Variable global para la capa dinámica
+let capaPetFriendly;
+
+// Función para cargar los datos desde Railway
+function cargarDatosPetFriendly() {
+  fetch("https://petfriendly-proxy-production.up.railway.app/datos_pet")
+    .then(response => response.json())
+    .then(data => {
+      if (capaPetFriendly) {
+        map.removeLayer(capaPetFriendly); // Eliminar capa anterior
+      }
+
+      capaPetFriendly = L.geoJSON(data, {
+        pointToLayer: function (feature, latlng) {
+          return L.circleMarker(latlng, {
+            radius: 6,
+            fillColor: getColorPorTipo(feature.properties.tipo_lugar),
+            color: "#333",
+            weight: 1,
+            opacity: 1,
+            fillOpacity: 0.8
+          });
+        },
+        onEachFeature: function (feature, layer) {
+          layer.bindPopup(`<strong>${feature.properties.nombre_lugar}</strong><br>${feature.properties.direccion}`);
+        }
+      }).addTo(map);
+
+      map.fitBounds(capaPetFriendly.getBounds()); // Ajuste automático de zoom
+    })
+    .catch(error => console.error("Error al cargar datos:", error));
+}
+
+// Función para asignar color según tipo de lugar
+function getColorPorTipo(tipo) {
   switch (tipo) {
     case "Veterinaria": return "blue";
     case "Parque": return "green";
@@ -587,34 +625,11 @@ legend.addTo(map);
   }
 }
 
-fetch("https://petfriendly-proxy-production.up.railway.app/datos_pet")
-  .then(res => res.json())
-  .then(data => {
-    const capa = L.geoJSON(data, {
-      pointToLayer: function (feature, latlng) {
-        return L.circleMarker(latlng, {
-          radius: 8,
-          fillColor: obtenerColor(feature.properties.tipo_lugar),
-          color: "#000",
-          weight: 1,
-          opacity: 1,
-          fillOpacity: 0.8
-        });
-      },
-      onEachFeature: function (feature, layer) {
-        const props = feature.properties;
-        layer.bindPopup(`
-          <strong>${props.nombre_lugar}</strong><br>
-          Tipo: ${props.tipo_lugar}<br>
-          Dirección: ${props.direccion}<br>
-          Comentario: ${props.comentario || 'Sin comentarios'}
-        `);
-      }
-    }).addTo(map);
+// Llamar la función al cargar
+cargarDatosPetFriendly();
 
-    map.fitBounds(capa.getBounds());
-  });
-
+// Refrescar cada 30 segundos
+setInterval(cargarDatosPetFriendly, 30000);
 
 </script>
 
